Fixing logo bug - the Z would not fully appear on smaller screens

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,27 +7,19 @@ body {
   background-size: cover;
   font-size: medium;
 }
-.row {
-  margin-left: 0%;
-}
 .center {
   text-align: center;
   vertical-align: middle;
 }
 .logo {
   margin-top: 2%;
-  padding-left: 0%;
 }
 .content {
   left: 0;
   right: 0;
   z-index: 9999;
-  margin-top: 1%;
+  background-clip: content-box;
   background-color: rgba(255,255,255,0.4);
-  padding-bottom: 1%;
-  padding-top: 1%;
-  padding-left: 0%;
-  padding-right: 0%;
 }
 .submit {
   vertical-align: bottom;
